test-output/src/tests/snapshots/test_output__tests__snapshots__erlang-echo_non_record_atom_tag.snap
---
source: test-output/src/tests/snapshots.rs
expression: output
---
--- main.gleam ----------------------
pub fn main() {
  echo #(to_atom("UP"), 1, 2)
  echo #(to_atom("down"), 12.34)
  echo #(to_atom("Both"), "ok")
}

pub type Atom

@external(erlang, "erlang", "binary_to_atom")
pub fn to_atom(string: String) -> Atom


--- gleam run output ----------------
--- gleam run err output ------------
[90msrc/main.gleam:2[39m
#(atom.create("UP"), 1, 2)
[90msrc/main.gleam:3[39m
Down(12.34)
[90msrc/main.gleam:4[39m
#(atom.create("Both"), "ok")
