test-output/src/tests/snapshots/test_output__tests__snapshots__erlang-otp_root_run_dependency.snap
---
source: test-output/src/tests/snapshots.rs
expression: output
---
--- external_dependency.gleam ----------------------
import gleam/io

pub fn main() {
  io.println("Hello from other_mod!")
}


--- gleam run output ----------------
Hello from other_mod!
--- gleam run err output ------------
