test-output/src/tests/snapshots/test_output__tests__snapshots__javascript-echo_circular_reference.snap
---
source: test-output/src/tests/snapshots.rs
expression: output
---
--- main.gleam ----------------------
pub fn main() {
  echo circular_reference()
  Nil
}

type Thing

@external(javascript, "./main_ffi.mjs", "circular_reference")
fn circular_reference() -> Thing


--- gleam run output ----------------
--- gleam run err output ------------
[90msrc/main.gleam:2[39m
#(//js(circular reference))
